--- a/mini3_1.1/Base.lproj/Main.storyboard
+++ b/mini3_1.1/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="mzY-RT-Cli" customClass="MealTableViewCell" customModule="mini3_1_1" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="mzY-RT-Cli" customClass="MealTableViewCell" customModule="mini3_1_1" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mzY-RT-Cli" id="U4v-DX-t6q">
@@ -76,13 +76,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ur0-VO-Ap7">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ur0-VO-Ap7">
                                 <rect key="frame" x="37" y="117" width="320" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="OXf-Im-7ve">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="OXf-Im-7ve">
                                 <rect key="frame" x="37" y="165" width="320" height="320"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -90,16 +90,18 @@
                                 </connections>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="B4U-hv-Mqg" customClass="RatingControl" customModule="mini3_1_1" customModuleProvider="target">
-                                <rect key="frame" x="37" y="506" width="254" height="46"/>
+                                <rect key="frame" x="37" y="506" width="252" height="44"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="OXf-Im-7ve" firstAttribute="top" secondItem="Ur0-VO-Ap7" secondAttribute="bottom" constant="18" id="DNH-hP-eKk"/>
-                            <constraint firstItem="OXf-Im-7ve" firstAttribute="leading" secondItem="B4U-hv-Mqg" secondAttribute="leading" id="Eqf-hi-qsY"/>
-                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="leading" secondItem="OXf-Im-7ve" secondAttribute="leading" id="FBQ-XT-LcV"/>
-                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="trailing" secondItem="OXf-Im-7ve" secondAttribute="trailing" id="brr-jW-SjP"/>
-                            <constraint firstItem="B4U-hv-Mqg" firstAttribute="top" secondItem="OXf-Im-7ve" secondAttribute="bottom" constant="21" id="dFW-UQ-1zg"/>
+                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="37" id="8Tz-Sz-amH"/>
+                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="leading" secondItem="OXf-Im-7ve" secondAttribute="leading" id="Bdq-J1-77o"/>
+                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="trailing" secondItem="OXf-Im-7ve" secondAttribute="trailing" id="Yqg-50-dnR"/>
+                            <constraint firstItem="OXf-Im-7ve" firstAttribute="top" secondItem="Ur0-VO-Ap7" secondAttribute="bottom" constant="18" id="ZWc-Nf-atS"/>
+                            <constraint firstItem="Ur0-VO-Ap7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="j6b-qK-BD0"/>
+                            <constraint firstItem="OXf-Im-7ve" firstAttribute="leading" secondItem="B4U-hv-Mqg" secondAttribute="leading" id="q25-xj-OE1"/>
+                            <constraint firstItem="B4U-hv-Mqg" firstAttribute="top" secondItem="OXf-Im-7ve" secondAttribute="bottom" constant="21" id="wHR-OT-6yY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -111,7 +113,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="9KD-ui-dCK">
                             <connections>
-                                <segue destination="3hx-Vb-fPP" kind="unwind" unwindAction="unwindToMealListWithSender:" id="pr5-wV-fiM"/>
+                                <segue destination="3hx-Vb-fPP" kind="unwind" unwindAction="unwindToMealListWithSender:" id="pTr-sl-D3j"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
